<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.scarlet.misd.FormForSignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/form_for_create_new_account"
        android:layout_margin="10dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/thirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/thirst_name"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <Spinner
            android:id="@+id/dateOfBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </Spinner>
        <Spinner
            android:id="@+id/monthOfBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <Spinner
            android:id="@+id/yearOfBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/seriesOfPassport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/series"/>
        <EditText
            android:id="@+id/numberOfPassport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/number_of_passport"/>
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/work_email"/>
    <EditText
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/position"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickGenerateDocument"
        android:text="@string/generate_document"/>

</LinearLayout>
